--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "nodemon --exec babel-node src/index.js",
     "build": "babel src/ --out-dir dist",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "docs:dev": "vuepress dev docs --port 3002",
+    "docs:build": "vuepress build docs"
   },
   "keywords": [
     "node",
@@ -20,7 +22,11 @@
     "@babel/core": "^7.26.8",
     "@babel/node": "^7.26.0",
     "@babel/preset-env": "^7.26.8",
-    "sequelize-cli": "^6.6.2"
+    "@vuepress/bundler-vite": "^2.0.0-rc.19",
+    "@vuepress/theme-default": "^2.0.0-rc.78",
+    "sass-embedded": "^1.85.0",
+    "sequelize-cli": "^6.6.2",
+    "vuepress": "^2.0.0-rc.19"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
